--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "rato"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Rohit Joshi <rohit.c.joshi@gmail.com>"]
 edition = "2018"
 description = "Redis protocol parsing library"
 keywords=["redis", "protocol"]
 License="Apache 2.0"
 license-file="LICENSE"
+publish = true
 
 [badges]
 travis-ci = { repository = "https://github.com/rohitjoshi/rato", branch = "master" }
